Change the email service Sendgrid -> Gmail

--- a/Backend/templates/otp.html
+++ b/Backend/templates/otp.html
@@ -64,11 +64,11 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Jio Cinema: RESET PASSWORD Verification OTP</h2>
+            <h2>CineHub: RESET PASSWORD Verification OTP</h2>
         </div>
         <h2>Hi #{name} </h2>
         <div class="content">
-            <p>Your One-Time Password (OTP) for reseting the password for Jio Cinema:</p>
+            <p>Your One-Time Password (OTP) for reseting the password for CineHub Account :</p>
             <table>
                 <tr>
                     <td style="border-radius: 6px 6px 0 0; background-color: #f9f9f9; padding: 10px;">
@@ -90,8 +90,9 @@
                 </tr>
             </table>
             <div class="footer">
-            Team Jio Cinema<br>
-            Copyright © 2025 Jio India Limited. All rights reserved.
+            Team CineHub<br>
+            ✨ Built with ❤️ by Adarsh Parihar <br>
+            All rights reserved.
         </div>
         </div>
     </div>
