--- a/Backend/templates/welcome.html
+++ b/Backend/templates/welcome.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Welcome to Jio Cinema</title>
+    <title>Welcome to CineHub</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
 
 <body>
     <div class="container">
-        <h1>Welcome to Jio Cinema!</h1>
+        <h1>Welcome to CineHub!</h1>
         <p>Dear <strong>#{name}</strong>,</p>
         <p>We’re thrilled to have you on board! Get ready to explore a world of amazing movies, TV shows, and exclusive content, all in one place.</p>
         
@@ -68,8 +68,9 @@
         <p>If you need any help, feel free to reach out to our support team.</p>
 
         <div class="footer">
-            Team Jio Cinema<br>
-            Copyright © 2025 Jio India Limited. All rights reserved.
+            Team CineHub<br>
+            ✨ Built with ❤️ by Adarsh Parihar <br>
+            All rights reserved.
         </div>
     </div>
 </body>
